# gino

./: .devassistant  .gitignore  AUTHORS  Makefile.am  README  README.md  client.c  configure.ac  files.c  gino.spec  gpl-declare  server.c  simple_threads.c
.deps/: client.Po  files.Po  server.Po  simple_threads.Po
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: Makefile.am  common.h  editor.h  fileop.h  main.c  statusbar.h  toolbar.c  toolbar.h  window.c  window.h
